force-app/main/default/objects/Case/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Estate planning attorney</fullName>
            </value>
            <value>
                <fullName>Personal injury attorney</fullName>
            </value>
            <value>
                <fullName>Another organization</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Seminar - Internal</fullName>
            </value>
            <value>
                <fullName>Seminar - Partner</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>