force-app/main/default/objects/Case/fields/Satisfaction_of_Medicare_Medicaid_Liens__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_of_Medicare_Medicaid_Liens__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(PI only)</inlineHelpText>
    <label>Satisfaction of Medicare/Medicaid Liens</label>
    <type>Checkbox</type>
</CustomField>