force-app/main/default/objects/Case/fields/Satisfaction_of_Personal_Debits__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_of_Personal_Debits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satisfaction of Personal Debits</label>
    <type>Checkbox</type>
</CustomField>