force-app/main/default/objects/Case/fields/Section_8__c.field-meta.xml
<CustomField>
    <fullName>Section_8__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section 8</label>
    <type>Checkbox</type>
</CustomField>