force-app/main/default/objects/Case/fields/Send_3_week_reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_3_week_reminder__c</fullName>
    <description>An automatic reminder is sent 3 weeks after a client has received the Joinder Agreement / Enrollment Packet.</description>
    <formula>IF( Date_of_Enrollment_Packet_Sent__c  &lt;= (TODAY() - 21),
  TRUE,
  FALSE
)</formula>
    <label>Send 3-week reminder</label>
    <type>Checkbox</type>
</CustomField>