force-app/main/default/objects/Case/fields/Send_Missing_Documents_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Missing_Documents_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box and saving the record will send an email to the client with a list of documents that are currently in &quot;Pending&quot; status. Please ensure the client&apos;s email address is entered before selecting this option.</inlineHelpText>
    <label>Send Missing Documents Email</label>
    <type>Checkbox</type>
</CustomField>