force-app/main/default/objects/Case/fields/Source_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funding__c</fullName>
    <label>Source of Funding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excess Resources</fullName>
            </value>
            <value>
                <fullName>Inheritance</fullName>
            </value>
            <value>
                <fullName>SSA payback</fullName>
            </value>
            <value>
                <fullName>Legal Settlement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>