force-app/main/default/objects/Case/fields/SS__c.field-meta.xml
<CustomField>
    <fullName>SS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SS</label>
    <type>Checkbox</type>
</CustomField>