force-app/main/default/objects/Case/fields/SSA_payback__c.field-meta.xml
<CustomField>
    <fullName>SSA_payback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSA payback</label>
    <type>Checkbox</type>
</CustomField>