force-app/main/default/objects/Case/fields/SSA_per_month__c.field-meta.xml
<CustomField>
    <fullName>SSA_per_month__c</fullName>
    <label>SSA (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>