force-app/main/default/objects/Case/fields/SSA_Release__c.field-meta.xml
<CustomField>
    <fullName>SSA_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSA Release</label>
    <type>Checkbox</type>
</CustomField>