force-app/main/default/objects/Case/fields/SSDI__c.field-meta.xml
<CustomField>
    <fullName>SSDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSDI</label>
    <type>Checkbox</type>
</CustomField>