force-app/main/default/objects/Case/fields/State_Medicaid_Received__c.field-meta.xml
<CustomField>
    <fullName>State_Medicaid_Received__c</fullName>
    <label>State Medicaid Received</label>
    <type>TextArea</type>
</CustomField>