force-app/main/default/objects/Case/fields/Test_Email__c.field-meta.xml
<CustomField>
    <fullName>Test_Email__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    Lead__r.Email,
    Account.PersonContact.Email 
)</formula>
    <label>Test Email</label>
    <type>Text</type>
</CustomField>