force-app/main/default/objects/Case/fields/Trigger_60_day_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Trigger_60_day_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box will be automatically checked if the Onboarding record remains in the Pending status for 60 days or more. When checked, this field triggers a reminder automation that sends an email to the record owner, notifying them that the record has been in this status for over 60 days.</inlineHelpText>
    <label>Trigger 60-day Reminder Email</label>
    <type>Checkbox</type>
</CustomField>