force-app/main/default/objects/Case/fields/Will_or_Revocable_Living_Trust__c.field-meta.xml
<CustomField>
    <fullName>Will_or_Revocable_Living_Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will or Revocable Living Trust - Deferred Funding</inlineHelpText>
    <label>Will or Revocable Living Trust</label>
    <type>Checkbox</type>
</CustomField>