force-app/main/default/objects/Case/fields/Work_Income__c.field-meta.xml
<CustomField>
    <fullName>Work_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Income</label>
    <type>Checkbox</type>
</CustomField>