force-app/main/default/objects/Case/fields/X18_Digit_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Case_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Case ID</label>
    <type>Text</type>
</CustomField>