force-app/main/default/objects/Case/fields/X60_day_reminder__c.field-meta.xml
<CustomField>
    <fullName>X60_day_reminder__c</fullName>
    <description>A follow-up reminder is sent to the Onboarding Owner after 60 days if the client Onboarding Status is still pending.</description>
    <formula>AND(
    NOT(ISBLANK( Onboarding_Pending_Start_Date__c )),
    ISPICKVAL(Status, &quot;Onboarding Pending&quot;),
    TODAY() -  Onboarding_Pending_Start_Date__c  &gt;= 60
)</formula>
    <inlineHelpText>This field is automatically populated once the 60-day reminder email has been sent to the client, triggered when the Onboarding status has been in Pending for 60 days.</inlineHelpText>
    <label>60-day reminder</label>
    <type>Checkbox</type>
</CustomField>