force-app/main/default/objects/Case/validationRules/Enrollment_Packet_Sent_Email_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Packet_Sent_Email_Alert</fullName>
    <active>true</active>
    <description>Warn user when Email is missing</description>
    <errorConditionFormula>ISBLANK(SuppliedEmail) &amp;&amp; TEXT(Status) = &quot;Enrollment Packet Sent&quot;</errorConditionFormula>
    <errorDisplayField>SuppliedEmail</errorDisplayField>
    <errorMessage>This onboarding does not have a value on the Email field. To send the Enrollment Packet to the Beneficiary, a value must be entered.</errorMessage>
</ValidationRule>