force-app/main/default/objects/Case/validationRules/Ensure_MSA_Type_Empty_When_Not_MSA.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_MSA_Type_Empty_When_Not_MSA</fullName>
    <active>true</active>
    <description>Validates that the MSA Type field is empty when Trust Type is not &apos;MSA&apos;.</description>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Trust_Type__c, &quot;MSA&quot;)),
  NOT(ISBLANK(TEXT(MSA_Type__c)))
)</errorConditionFormula>
    <errorDisplayField>MSA_Type__c</errorDisplayField>
    <errorMessage>MSA Type must be empty if Trust Type is not &apos;MSA&apos;.</errorMessage>
</ValidationRule>