force-app/main/default/objects/Case/validationRules/Require_Beneficiary_ID_for_TrueLink.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Beneficiary_ID_for_TrueLink</fullName>
    <active>true</active>
    <description>Prevents users from selecting &apos;Yes&apos; for &apos;Enter to True Link now?&apos; unless a Beneficiary ID is present.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Enter_to_TrueLink_now__c, &quot;TRUE&quot;),
    ISBLANK(Beneficiary_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Enter_to_TrueLink_now__c</errorDisplayField>
    <errorMessage>A Beneficiary ID is required before selecting &apos;Yes&apos; for &apos;Enter to True Link now?&apos;. Go to the Lead related to this Onboarding and click the Convert button so the Lead becomes a Beneficiary (Account). The Beneficiary ID will be automatically generated.</errorMessage>
</ValidationRule>