force-app/main/default/objects/Case/validationRules/Require_Email_For_Received_Email_Send.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_For_Received_Email_Send</fullName>
    <active>true</active>
    <description>Prevents users from checking the All Enrollment Packet Received checkbox unless the SuppliedEmail field is filled in. This ensures that the automated email can be sent successfully.</description>
    <errorConditionFormula>AND(
    ISBLANK(SuppliedEmail),
    All_Enrollment_Packet_Received__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>All_Enrollment_Packet_Received__c</errorDisplayField>
    <errorMessage>An email address is required to send the &apos;Arcare Enrollment - Everything Received&apos; email. Please enter a valid email before checking this box.</errorMessage>
</ValidationRule>