force-app/main/default/objects/Case/listViews/All_Onboardings.listView-meta.xml
<ListView>
    <fullName>All_Onboardings</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Onboardings</label>
</ListView>