force-app/main/default/objects/Case/listViews/InternationalEscalations_Case.listView-meta.xml
<ListView>
    <fullName>InternationalEscalations_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>International - Escalations</label>
    <queue>InternationalEscalations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>