force-app/main/default/objects/Case/listViews/InternationalPlatinumGold_Case.listView-meta.xml
<ListView>
    <fullName>InternationalPlatinumGold_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>International - Platinum/Gold</label>
    <queue>InternationalPlatinumGold</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>