force-app/main/default/objects/Case/listViews/InternationalSilverBronze_Case.listView-meta.xml
<ListView>
    <fullName>InternationalSilverBronze_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>International - Silver/Bronze</label>
    <queue>InternationalSilverBronze</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>