force-app/main/default/objects/Case/listViews/PartnerRelations_Case.listView-meta.xml
<ListView>
    <fullName>PartnerRelations_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Relations</label>
    <queue>PartnerRelations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>