force-app/main/default/objects/Case/listViews/Service_Enrollment_Cases.listView-meta.xml
<ListView>
    <fullName>Service_Enrollment_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Service_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Service_Enrollment__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Service Enrollment Cases</label>
</ListView>