force-app/main/default/objects/Case/listViews/USEscalations_Case.listView-meta.xml
<ListView>
    <fullName>USEscalations_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>US - Escalations</label>
    <queue>USEscalations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>