force-app/main/default/objects/Case/listViews/USPlatinumGold_Case.listView-meta.xml
<ListView>
    <fullName>USPlatinumGold_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>US - Platinum/Gold</label>
    <queue>USPlatinumGold</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>