force-app/main/default/objects/Case/listViews/USSilverBronze_Case.listView-meta.xml
<ListView>
    <fullName>USSilverBronze_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>US - Silver/Bronze</label>
    <queue>USSilverBronze</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>